MB-39946: Set diskSize at rollback

diskSize was not correctly set to an earlier value at rollback,
leading to misaccounting and potential underflows.

Change-Id: I46f30c5e366013d706dc314623ea726629331475
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/131844
Reviewed-by: Richard de Mellow <richard.demellow@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>